# data-integration-and-transformation-library

./: .gitignore  LICENSE  README.md  ideas.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/ditl/: __init__.py  base_model.py  excpetions.py  state_manager.py
src/ditl/models/: column.py  data_type.py  run_config.py  schema.py  supported_library.py  table.py
